--- a/src/index.css
+++ b/src/index.css
@@ -3,10 +3,12 @@ html {
     font-family: 'Roboto', sans-serif;
 
     /* https://www.paulirish.com/2012/box-sizing-border-box-ftw/ */
+    -webkit-box-sizing: border-box;
     box-sizing: border-box;
 }
 html * {
     font-family: 'Roboto', sans-serif;
+    -webkit-box-sizing: inherit;
     box-sizing: inherit;
 }
 
